# dotfiles

./: README.md  install.py  packages.txt
.config/btop/: btop.conf
.config/fastfetch/: config.jsonc  logo.txt  template.jsonc
.config/fastfetch/logos/: R.ascii
.config/fish/: config.fish
.config/hypr/: gamemode.sh  hypridle.conf  hyprland.conf  hyprland_garuda.conf  hyprlock.conf  hyprpaper.conf  monitors.conf  selector_temas.sh  wifi_menu.sh
.config/mako/: config
.config/orbit/: theme.toml
.config/rofi/: config.rasi  premium.rasi  submenus.rasi  wallpapers.rasi
.config/scripts/: mouse_info.py
.config/scripts/audio/: stream-mode.sh
.config/scripts/waybar/: power-profile.sh  rofi-audio.sh
.config/waybar/: config  style.css
.config/wlogout/: style.css
.config/wofi/: style.css
.config/yazi/: keymap.toml  yazi.toml
Rust/exercises/anagrama/: Cargo.toml
Rust/exercises/anagrama/src/: main.rs
Rust/exercises/fizz_buzz/src/: main.rs
Rust/focus/: Cargo.toml  focus_analytics.json  focus_log.txt
Rust/focus/src/: main.rs
Rust/grep/: Cargo.toml  poema.txt
Rust/grep/src/: main.rs
Rust/hola_mundo/src/: main.rs
Rust/minitop/: Cargo.toml
Rust/minitop/src/: main.rs
Rust/rustlings/exercises/01_variables/: variables3.rs
Rust/rustlings/exercises/03_if/: if1.rs  if2.rs
Rust/rustlings/exercises/05_vecs/: vecs1.rs
Rust/rustlings/exercises/07_structs/: structs1.rs
Rust/rustlings/exercises/11_hashmaps/: hashmaps1.rs  hashmaps2.rs  hashmaps3.rs
Rust/weather/: Cargo.toml
Rust/weather/src/: main.rs
configs/audio/: streaming.qpwgraph
(+12 files in other folders)
